--- a/src/app/components/nav/nav.component.less
+++ b/src/app/components/nav/nav.component.less
@@ -1,7 +1,10 @@
 .col-2 {
-  background-color: antiquewhite;
-}
-
-.grid {
+  display: flex;
   justify-content: center;
+  align-items: center;
+  background-color: antiquewhite;
+  width: 32%;
+  height: 40px;
+  vertical-align: middle;
+  padding: 0 0 0 0;
 }
