--- a/src/app/components/fileupload/fileupload.component.html
+++ b/src/app/components/fileupload/fileupload.component.html
@@ -1,3 +1,7 @@
-<p>
-  fileupload works!
-</p>
+<br>
+<br>
+<div class="container">
+  <input style="display: none" type="file" (change)="onFileChanged($event)" #fileInput>
+  <button (click)="fileInput.click()">Select File</button>
+  <button (click)="onUpload()">Upload!</button>
+</div>
